<resources>
    <!-- splash activity -->
    <string name="app_name">BMI</string>
    <string name="next"><u>Next</u></string>

    <!-- login activity -->

    <string name="BMI_Analyzer">BMI Analyzer</string>
    <string name="welcome">Welcome Back</string>
    <string name="Help_text_1">if you already have an account, log in</string>
    <string name="user">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Log in</string>

    <!-- sign up activity -->
    <string name="SignUp">Sign Up</string>
    <string name="text_create">Create New Account</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="Re_password">Re-password</string>
    <string name="create">CREATE</string>

    <!-- complete information activity -->

    <string name="information">Complete Your Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="length">Length</string>
    <string name="cm">cm</string>
    <string name="BirthDay">Birth Of Day</string>
    <string name="Save_Data">Save Data</string>

    <!--  home activity  -->
    <string name="hi">Hi, Yazan</string>
    <string name="new_status">Current Status</string>
    <string name="LogOut">Log Out</string>
    <string name="current_status">Current Status</string>
    <string name="mas_current_status">Normal (still Good)</string>
    <string name="Old_Status">Old Status</string>
    <string name="Add_Food">Add Food</string>
    <string name="Add_Record">Add Record</string>
    <string name="View_Food">View Food</string>

    <!-- new record activity -->
    <string name="new_Record">New Record</string>
    <string name="Add_Food_Details">Add Food Details</string>
    <string name="Category">category</string>
    <string name="Calorie">Calorie</string>
    <string name="Photo">Photo</string>
    <string name="Upload_Photo">Upload Photo</string>
    <string name="Save">Save</string>
    <string name="food_list">Food List</string>
    <string name="edit_food_details">Edit Food Details</string>


    <string-array name="food_category">
        <item>Fish</item>
        <item>Fruits</item>
        <item>Meat</item>
    </string-array>

</resources>