<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home">


    <TextView
        android:id="@+id/textView_BIM"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/BMI_Analyzer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/main_color"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/hi"
                android:textSize="35dp"
                android:textStyle="bold"
                android:textColor="@color/grae"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/main_color"
                    android:text="@string/current_status"/>

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="-10dp"
                    android:textSize="22dp"
                    android:layout_gravity="center"
                    android:textColor="@color/grae"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/borderblue"
                    android:text="@string/mas_current_status"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="35dp"
                    android:text="@string/Old_Status"
                    android:textColor="@color/main_color"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="20dp"
                    android:padding="12dp"
                    android:orientation="vertical"
                    android:background="@drawable/borderblue">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="10"
                        tools:listitem="@layout/element" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <Button
                    android:id="@+id/button_add_food"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_margin="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Add_Food"
                    android:textColor="@color/white"
                    android:background="@drawable/borderblue"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/button_add_record"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_margin="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Add_Record"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/borderblue"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_view_food"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:text="@string/View_Food"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/borderblue"/>

            <TextView
                android:id="@+id/textView_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:padding="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/LogOut"
                android:layout_gravity="bottom"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>