<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteInformation">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_BIM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/main_color"
            android:text="@string/BMI_Analyzer"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:gravity="center"
            android:padding="12sp"
            android:textColor="@color/main_color"
            android:textSize="44dp"
            android:textStyle="bold"
            android:text="@string/information" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="24sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:gravity="center"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/main_color" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="47sp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/main_color"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="16sp"
                    android:textColor="@color/main_color" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:buttonTint="@color/main_color"
                    android:checked="false"
                    android:text="@string/female"
                    android:textSize="16sp"
                    android:textColor="@color/main_color" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:text="@string/weight"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="52sp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_minusWeight"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/borderblue"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/main_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edittext_weight"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:background="@drawable/borderblue"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="70"
                    android:textColor="@color/main_color"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_plusWeight"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_gravity="center"
                    android:background="@drawable/borderblue"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="@color/main_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/kg"
                    android:textColor="@color/main_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"

                android:text="@string/length"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="52sp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_minusLength"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/borderblue"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edittext_length"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:background="@drawable/borderblue"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:text="170"
                android:maxLines="1"
                android:inputType="number"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plusLength"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:background="@drawable/borderblue"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cm"
                android:textColor="@color/main_color" />
        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:text="@string/BirthDay"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_dob"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12sp"
                android:background="@drawable/borderblue"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:maxLines="1"/>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_saveDataInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20sp"
            android:background="@color/main_color"
            android:text="@string/Save_Data"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

